--- a/package.json
+++ b/package.json
@@ -53,9 +53,14 @@
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "css-loader": "^0.23.1",
     "expect": "^1.18.0",
     "expect-jsx": "^2.5.1",
     "mocha": "^2.4.5",
-    "react-addons-test-utils": "^15.0.2"
+    "node-sass": "^4.5.2",
+    "react-addons-test-utils": "^15.0.2",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.13.2",
+    "webpack": "^1.15.0"
   }
 }
