--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "test": "NODE_ENV=production mocha './tests/**/*.spec.js' --compilers js:babel-core/register",
+    "test": "mocha -w test/helpers/browser.js test/*.spec.js",
     "clean": "rimraf dist",
     "start": "node devServer.js",
     "tunnel": "browser-sync start --proxy localhost:7770 --tunnel jg075"
@@ -18,15 +18,17 @@
   "license": "MIT",
   "homepage": "https://github.com/JG075/react-quote-builder",
   "dependencies": {
-    "babel-core": "^6.7.7",
+    "babel-core": "^6.24.1",
     "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.4.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-plugin-transform-react-display-name": "^6.5.0",
     "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-airbnb": "^2.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.23.1",
     "eslint": "^2.9.0",
     "eslint-plugin-babel": "^3.2.0",
@@ -53,13 +55,17 @@
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.8.2",
     "expect": "^1.18.0",
     "expect-jsx": "^2.5.1",
-    "mocha": "^2.4.5",
+    "jsdom": "^10.1.0",
+    "mocha": "^2.5.3",
     "node-sass": "^4.5.2",
-    "react-addons-test-utils": "^15.0.2",
+    "react-addons-test-utils": "^15.5.1",
     "sass-loader": "^6.0.5",
+    "sinon": "^2.2.0",
     "style-loader": "^0.13.2",
     "webpack": "^1.15.0"
   }
