--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-plugin-transform-react-display-name": "^6.5.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-airbnb": "^2.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.23.1",
+    "babel-runtime": "^6.23.0",
+    "compression": "^1.6.2",
     "eslint": "^2.9.0",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-react": "^5.0.1",
@@ -48,16 +50,11 @@
     "redux": "^3.5.2",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.5.2",
-    "style-loader": "^0.13.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.0.0",
-    "webpack": "^1.13.0",
+    "webpack": "^2.0.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.8.2",
@@ -69,7 +66,9 @@
     "react-addons-test-utils": "^15.5.1",
     "sass-loader": "^6.0.5",
     "sinon": "^2.2.0",
-    "style-loader": "^0.13.2",
-    "webpack": "^1.15.0"
+    "style-loader": "^0.13.2"
+  },
+  "engines": {
+    "node": "7.8.0"
   }
 }
