--- a/package.json
+++ b/package.json
@@ -52,21 +52,21 @@
     "rimraf": "^2.5.2",
     "webpack": "^2.0.0",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-hot-middleware": "^2.10.0",
+    "style-loader": "^0.13.2",
+    "css-loader": "^0.23.1",
+    "sass-loader": "^6.0.5",
+    "node-sass": "^4.5.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
     "enzyme": "^2.8.2",
     "expect": "^1.18.0",
     "expect-jsx": "^2.5.1",
     "jsdom": "^10.1.0",
     "mocha": "^2.5.3",
-    "node-sass": "^4.5.2",
     "react-addons-test-utils": "^15.5.1",
-    "sass-loader": "^6.0.5",
-    "sinon": "^2.2.0",
-    "style-loader": "^0.13.2"
+    "sinon": "^2.2.0"
   },
   "engines": {
     "node": "7.8.0"
