--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "npm run clean && npm run build:webpack",
     "test": "NODE_ENV=production mocha --compilers js:babel-core/register --recursive test",
     "clean": "rimraf dist",
-    "start": "node devServer.js",
-    "tunnel": "browser-sync start --proxy localhost:7770 --tunnel jg075"
+    "start": "node devServer.js"
   },
   "repository": {
     "type": "git",
@@ -19,46 +18,39 @@
   "homepage": "https://github.com/JG075/react-quote-builder",
   "dependencies": {
     "babel-core": "^6.24.1",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
-    "babel-plugin-transform-react-display-name": "^6.5.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-airbnb": "^2.2.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "compression": "^1.6.2",
-    "eslint": "^2.9.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-react": "^5.0.1",
     "express": "^4.13.4",
-    "raven-js": "^2.3.0",
     "react": "^15.0.2",
     "react-addons-css-transition-group": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.2.3",
     "redux": "^3.5.2",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.5.2",
     "webpack": "^2.0.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0",
     "style-loader": "^0.13.2",
     "css-loader": "^0.23.1",
     "sass-loader": "^6.0.5",
     "node-sass": "^4.5.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.4.1",
+    "eslint": "^2.9.0",
+    "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-react": "^5.0.1",
+    "redbox-react": "^1.2.3",
     "chai": "^3.5.0",
     "enzyme": "^2.8.2",
     "expect": "^1.18.0",
@@ -66,7 +58,9 @@
     "jsdom": "^10.1.0",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.5.1",
-    "sinon": "^2.2.0"
+    "sinon": "^2.2.0",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "engines": {
     "node": "7.8.0"
